Change added in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <td>
             <h2>
               <font color="yellow" face="verdana">&nbsp;Crazy</font
-              ><font color="red" face="verdana">Zone</font>
+              ><font color="red" face="verdana">Songs</font>
             </h2>
           </td>
         </tr>
